# Bevy-Game

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: input.ron
src/: collider_detection.rs  game_state.rs  interface.rs  main.rs  spawn_enemy.rs
src/entities/: abner.rs  bullet.rs  camera.rs  gun.rs  mod.rs  urubu.rs
