

[package]
name = "urubu-bevy"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'

[dependencies]
#bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
bevy_xpbd_2d = "0.4"
bevy_ineffable = "0.5.0"
rand = "0.8.5"

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
"bevy_asset",
"bevy_scene",
"bevy_winit",
"bevy_render",
"bevy_core_pipeline",
"bevy_sprite",
"bevy_text",
"bevy_ui",
"default_font",

"png",

"x11",
"wayland",

"asset_processor",
]
